--- a/like.html
+++ b/like.html
@@ -4,80 +4,85 @@
 <meta name="description" content="Anonymous Like" />
   <meta charset="utf-8">
   <title>Anonymous Like</title>
-  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <style>
-body: {
-  font-family: 'Helvetica Neue', Helvetica, Arial, 'lucida grande',tahoma,verdana,arial,sans-serif;
-  line-height: 1.28;
-}
+    body {
+      background: transparent;
+      overflow: hidden;
+      -webkit-text-size-adjust: none;
+      font-size: 11px;
+      font-family: 'Helvetica Neue', Helvetica, Arial, 'lucida grande',tahoma,verdana,arial,sans-serif;
+      line-height: 1.28;
+      margin: 0;
+      padding: 0;
+      text-align: left;
+      direction: ltr;
+      unicode-bidi: embed;
+    }
 
-table: {
-  border-spacing: 2px;
-  border-color: gray;
-}
+    table {
+      border-spacing: 2px;
+      border-color: gray;
+    }
 
-.btn {
-  background: #333;
-  background: -webkit-gradient(linear, center top, center bottom, from(#4c69ba), to(#3b55a0));
-  background: -webkit-linear-gradient(#141823, #141823);
-  border: none;
-  -webkit-border-radius: 2px;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: bold;
-  height: 20px;
-  line-height: 20px;
-  text-shadow: 0 -1px 0 #141823;
-  white-space: nowrap;
-}
+    .btn {
+      background: #333;
+      background: -webkit-gradient(linear, center top, center bottom, from(#4c69ba), to(#3b55a0));
+      background: -webkit-linear-gradient(#141823, #141823);
+      border: none;
+      -webkit-border-radius: 2px;
+      color: #fff;
+      cursor: pointer;
+      display: inline-block;
+      font-weight: bold;
+      height: 20px;
+      line-height: 20px;
+      text-shadow: 0 -1px 0 #141823;
+      white-space: nowrap;
+    }
 
-.btn i {
-  min-width: 14px;
-}
+    .btn i {
+      min-width: 14px;
+    }
 
-.count {
-  background: white;
-  border: 1px solid #898f9c;
-  color: #6a7180;
-  display: inline-block;
-  font-size: 11px;
-  height: auto;
-  line-height: 18px;
-  margin-left: 7px;
-  min-width: 15px;
-  padding: 0 3px;
-  text-align: center;
-  white-space: nowrap;
-}
+    .count {
+      background: white;
+      border: 1px solid #898f9c;
+      color: #6a7180;
+      display: inline-block;
+      font-size: 11px;
+      height: auto;
+      line-height: 18px;
+      margin-left: 7px;
+      min-width: 15px;
+      padding: 0 3px;
+      text-align: center;
+      white-space: nowrap;
+    }
 
-.nub {
-  height: 0;
-  left: 2px;
-  position: relative;
-  top: -15px;
-  width: 5px;
-  z-index: 2;
-}
+    .nub {
+      height: 0;
+      left: 2px;
+      position: relative;
+      top: -15px;
+      width: 5px;
+      z-index: 2;
+    }
 
-.nub s, .nub i {
-  border-color: transparent #898f9c;
-  border-style: solid;
-  border-width: 4px 5px 4px 0;
-  display: block;
-  position: relative;
-  top: 1px;
-}
+    .nub s, .nub i {
+      border-color: transparent #898f9c;
+      border-style: solid;
+      border-width: 4px 5px 4px 0;
+      display: block;
+      position: relative;
+      top: 1px;
+    }
 
-.nub i {
-  border-right-color: #fff;
-  left: 1px;
-  top: -7px;
-}
-
-.noop {
-  
-}
+    .nub i {
+      border-right-color: #fff;
+      left: 1px;
+      top: -7px;
+    }
   </style>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
@@ -129,8 +134,10 @@ table: {
     
       var Like  = Parse.Object.extend("like");
       var query = new Parse.Query(Like);
-      var url   = window.document.location.href;
-      var title = window.document.title;
+      var data  = window.document.location.search;
+      var json  = JSON.parse(decodeURIComponent(data.substr(1)));
+      var url   = json.url;
+      var title = json.title;
       var likeObj;
     
       // Update count.
