Update remote like button page

--- a/test/like.html
+++ b/test/like.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Like Button Test Page</h1>
     
-    <iframe id="anonymous-like" src="" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe><script>var al = document.getElementById('anonymous-like'); var data = { title: window.document.title, url: window.document.location.href }; al.src = 'http://s3.amazonaws.com/anonymouslike-test/like.html' + '?' + encodeURIComponent(JSON.stringify(data));</script>
+    <iframe id="anonymous-like" src="" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe><script>var al = document.getElementById('anonymous-like'); var data = { title: window.document.title, url: window.document.location.href }; al.src = 'http://s3.amazonaws.com/anonymouslike/like.html' + '?' + encodeURIComponent(JSON.stringify(data));</script>
     
     <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fanonymouslike.me%2F&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=21&amp;appId=631169756957234" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
   </body>
